@@ -68,6 +68,12 @@ stream over UDP multicast.
 \fB\-z\fR, \fB\-\-input\-ignore\-disc\fR
 Do not report input discontinuity or RTP discontinuity errors.
 .TP
+\fB\-M\fR, \fB\-\-service\fR <service_id>
+Choose the service id. This option must be used when the input is MPTS
+in order to select the correct service (program). If the input is MPTS
+and \fB\-\-service\fR is not used, tsdecrypt chooses the last service
+listed in PAT.
+.TP
 .SH OUTPUT OPTIONS
 .PP
 .TP
